# ETF_DataAnalysis

./: .gitignore  README.md  docker-compose-metabase.yml  docker-compose-mysql.yaml  docker-compose-mysql.yml  pyproject.toml  test.ipynb  專案架構.drawio
ETF_project/: pyproject.toml
ETF_project/data_ingestion/: ETF_crawler_dividend.py  mysql.py
airflow/: docker-compose-airflow.yml
airflow/dags/: ETF_bigquery_etl_dag.py  ETF_crawler_etl_dag.py  ETF_crawler_price_dag.py
data_ingestion/: ETF_crawler_dividend.py  ETF_crawler_price.py  ETF_crawler_today_price.py  bigquery.py  etf_bigquery_transform.py  etf_sync_mysql_to_bigquery.py  metrics_pipeline.py  mysql.py
