[project]
name = "etf-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.38.0",
    "pandas>=2.3.2",
    "pandas-gbq>=0.29.1",
    "pyarrow>=17.0.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
